--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -113,74 +113,48 @@
                 <div class="col-lg-12 col-md-12 col-sm-12">
                     <div class="mobile-menu">
                         <nav id="dropdown">
-                            <ul>
+                            <ul class="main-menu text-right">
                                 <li>
-                                    <a href="index.html">HOME</a>
-                                    <ul>
+                                    <a href="/">Home</a>
+                                </li>
+                                <li>
+                                    <a href="#">Jobs</a>
+                                </li>
+                                <li>
+                                    <a href="{{ path('_aboutus') }}">About Us</a>
+                                </li>
+                                <li>
+                                    <a href="#">Services</a>
+                                    <ul class="dropdown">
                                         <li>
-                                            <a href="index.html">Home Version One</a>
+                                            <a href="{{ path('custom_softskills') }}">Soft Skills</a>
                                         </li>
                                         <li>
-                                            <a href="index-2.html">Home Version Two</a>
+                                            <a href="{{ path('custom_careercounselling') }}">Career counseling</a>
                                         </li>
                                         <li>
-                                            <a href="index-3.html">Home Box Layout</a>
+                                            <a href="{{ path('custom_communicationskills') }}">Communication skills</a>
+                                        </li>
+                                        <li>
+                                            <a href="{{ path('custom_psychologicalcounseling') }}">Psychological
+                                                counseling</a>
+                                        </li>
+                                        <li>
+                                            <a href="{{ path('custom_facultytraining') }}">Faculty training</a>
+                                        </li>
+                                        <li>
+                                            <a href="{{ path('custom_placementservices') }}">Placement services</a>
+                                        </li>
+                                        <li>
+                                            <a href="{{ path('custom_schoolaffiliation') }}">School Affiliation</a>
                                         </li>
                                     </ul>
                                 </li>
                                 <li>
-                                    <a href="job-board.html">Job</a>
-                                    <ul class="sub-menu">
-                                        <li>
-                                            <a href="single-job-post.html">Single Job</a>
-                                        </li>
-                                        <li>
-                                            <a href="job-details.html">Job Details</a>
-                                        </li>
-                                    </ul>
+                                    <a href="/blogs">Blog</a>
                                 </li>
                                 <li>
-                                    <a href="about.html">About</a>
-                                </li>
-                                <li>
-                                    <a href="#">Page</a>
-                                    <ul class="sub-menu">
-                                        <li>
-                                            <a href="job-board.html">Job Board</a>
-                                        </li>
-                                        <li>
-                                            <a href="single-job-post.html">Single Job</a>
-                                        </li>
-                                        <li>
-                                            <a href="job-details.html">Job Details</a>
-                                        </li>
-                                        <li>
-                                            <a href="candidates.html">Candidates</a>
-                                        </li>
-                                        <li>
-                                            <a href="resume.html">Resume</a>
-                                        </li>
-                                        <li>
-                                            <a href="blog.html">Blog Page</a>
-                                        </li>
-                                        <li>
-                                            <a href="blog-details.html">Blog Details</a>
-                                        </li>
-                                        <li>
-                                            <a href="contact.html">Contact</a>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li>
-                                    <a href="blog.html">Blog</a>
-                                    <ul class="sub-menu">
-                                        <li>
-                                            <a href="blog-details.html">Blog Details</a>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li>
-                                    <a href="contact.html">Contact</a>
+                                    <a href="{{ path('_contactus') }}">Contact Us</a>
                                 </li>
                             </ul>
                         </nav>
